deployment/02-eks-deploy-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sudip-deploy
  labels:
    app: springboot-app
  name: springboot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
      - name: my-springboot-app
        image: 514337728862.dkr.ecr.ap-northeast-1.amazonaws.com/sudip-28june-repo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
          name: http
          protocol: TCP
# service type loadbalancer       
---
apiVersion: v1
kind: Service
metadata:
  namespace: sudip-deploy
  labels:
    app: springboot-app
    k8s-app: springboot-app
  name: springboot-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8085
    nodePort: 32055
  type: NodePort
  selector:
    app: springboot-app
