deployment/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sudip-deploy
  name: sudip-28june-ingress-cpr
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: sudip-28june-cpr-ingress-alb
    # Ingress Core Settings
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    # alb.ingress.kubernetes.io/ip-address-type: dualstack
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:514337728862:certificate/494f5ca7-adde-4992-a4f5-f938dede4f9a
    ## SSL redirect. Redirect from http to https
    alb.ingress.kubernetes.io/ssl-redirect: '443'   

spec:
  ingressClassName: sudip-28june-aws-ingress-class  # Ingress Class                       
  rules:
    - http:
        paths:           
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-app
                port: 
                  number: 80
